# project_testing_1

./: pyproject.toml
project_testing_1/: gett.py  sett.py
tests/: test_gett.py  test_sett.py
